@@ -56,6 +56,9 @@ public class HtmlParser implements Parser {
   private static Pattern charsetPattern =
     Pattern.compile("charset=\\s*([a-z][_\\-0-9a-z]*)",
                     Pattern.CASE_INSENSITIVE);
+  private static Pattern charsetPatternHTML5 =
+      Pattern.compile("<meta\\s+charset\\s*=\\s*[\"']?([a-z][_\\-0-9a-z]*)[^>]*>",
+                      Pattern.CASE_INSENSITIVE);
   
   private String parserImpl;
 
@@ -64,13 +67,13 @@ public class HtmlParser implements Parser {
    * <em>unknown</em> encoding,  read out 'charset' parameter in the meta tag   
    * from the first <code>CHUNK_SIZE</code> bytes.
    * If there's no meta tag for Content-Type or no charset is specified,
+   * the content is checked for a Unicode Byte Order Mark (BOM).
+   * This will also cover non-byte oriented character encodings (UTF-16 only).
+   * If no character set can be determined,
    * <code>null</code> is returned.  <br />
-   * FIXME: non-byte oriented character encodings (UTF-16, UTF-32)
-   * can't be handled with this. 
-   * We need to do something similar to what's done by mozilla
-   * (http://lxr.mozilla.org/seamonkey/source/parser/htmlparser/src/nsParser.cpp#1993).
-   * See also http://www.w3.org/TR/REC-xml/#sec-guessing
-   * <br />
+   * See also http://www.w3.org/International/questions/qa-html-encoding-declarations,
+   * http://www.w3.org/TR/2011/WD-html5-diff-20110405/#character-encoding, and
+   * http://www.w3.org/TR/REC-xml/#sec-guessing
    *
    * @param content <code>byte[]</code> representation of an html file
    */
@@ -98,6 +101,30 @@ public class HtmlParser implements Parser {
       Matcher charsetMatcher = charsetPattern.matcher(metaMatcher.group(1));
       if (charsetMatcher.find()) 
         encoding = new String(charsetMatcher.group(1));
+    }
+    if (encoding == null) {
+      // check for HTML5 meta charset
+      metaMatcher = charsetPatternHTML5.matcher(str);
+      if (metaMatcher.find()) {
+        encoding = new String(metaMatcher.group(1));
+      }
+    }
+    if (encoding == null) {
+      // check for BOM
+      if (content.length >= 3
+          && content[0] == (byte) 0xEF
+          && content[1] == (byte) 0xBB
+          && content[2] == (byte) 0xBF) {
+        encoding = "UTF-8";
+      } else if (content.length >= 2) {
+        if (content[0] == (byte)0xFF
+            && content[1] == (byte)0xFE) {
+          encoding = "UTF-16LE";
+        } else if (content[0] == (byte)0xFE
+            && content[1] == (byte)0xFF) {
+          encoding = "UTF-16BE";
+        }
+      }
     }
 
     return encoding;
