@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Current Development
 
+* NUTCH-1733 parse-html to support HTML5 charset definitions (snagel)
+
 * NUTCH-1671 indexchecker to add digest field (snagel, lufeng)
 
 Nutch 1.8      - 11/03/2014 (dd/mm/yyyy)
